# python_backend_aith

./: pyproject.toml
.github/workflows/: main.yml  python-app.yml
hw2/: main.py  pyproject.toml  requirements.txt  test.py
hw3/: Dockerfile.app  app.py  docker-compose.yml  pyproject.toml
hw3/demo_service/api/: contracts.py  main.py  users.py  utils.py
hw4/: locustfile.py
tests/: conftest.py  test_coverage.py
