[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
requests = "^2.32.3"
prometheus-fastapi-instrumentator = "^7.0.0"
tqdm = "^4.66.5"
httpx = "^0.27.2"
faker = "^30.0.0"
pytest = "^8.3.3"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"