[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
requests = "^2.32.3"
prometheus-fastapi-instrumentator = "^7.0.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"